changed social links

--- a/_includes/social_links.html
+++ b/_includes/social_links.html
@@ -1,13 +1,13 @@
 <div class="social-icons">
   <div class="social-icons-center">
     {% if site.twitter_username %}
-      <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}" target="_blank"></a>
+      <!-- <a class="fa fa-twitter" href="https://twitter.com/{{ site.twitter_username }}" target="_blank"></a> -->
     {% endif %}
     {% if site.github_username %}
       <a class="fa fa-github" href="https://github.com/{{ site.github_username }}" target="_blank"></a>
     {% endif %}
     {% if site.google_scholar %}
-      <a class="ai ai-google-scholar" href="https://scholar.google.com/citations?user=wry3N6IAAAAJ&hl=en" target="_blank"></a>
+      <!-- <a class="ai ai-google-scholar" href="https://scholar.google.com/citations?user=wry3N6IAAAAJ&hl=en" target="_blank"></a> -->
     {% endif %}
     {% if site.cv %}
       <a class="ai ai-cv" href="{{ site.base_url }}/images/CV/Jacob-Kelly-CV.pdf" target="_blank"></a>
@@ -18,7 +18,7 @@
     {% if site.linkedin_username %}
       <a class="fa fa-linkedin" href="https://www.linkedin.com/in/{{ site.linkedin_username }}" target="_blank"></a>
     {% endif %}
-    <a class="fa fa-rss" href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank"></a>
+    <!-- <a class="fa fa-rss" href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank"></a>
     {% if site.reddit_username %}
     <a class="fa fa-reddit" href="https://reddit.com/user/{{ site.reddit_username }}" target="_blank"></a>
     {% endif %}
@@ -48,7 +48,7 @@
     {% endif %}
     {% if site.vk_id %}
       <a class="fa fa-vk" href="https://vk.com/{{ site.vk_id }}" target="_blank"></a>
-    {% endif %}
+    {% endif %} -->
   </div>
   <div class="right">
     {% if site.bitcoin_url %}
