--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,11 +68,11 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
     {% if site.post_preview_image %}
-    <meta property="og:image" content="{{ site.url }}/images/me.jpg">
+    <meta property="og:image" content="{{ site.url }}/images/me.jpg>
     {% endif %}
 
     <!-- Twitter Card -->
-    <meta name="twitter:card" content="summary" />
+    <!-- <meta name="twitter:card" content="summary" />
     {% if site.twitter_username %}
         <meta name="twitter:site" content="@{{ site.twitter_username }}" />
         <meta name="twitter:creator" content="@{{ site.twitter_username }}" />
@@ -82,7 +82,7 @@
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
     {% if site.post_preview_image %}
     <meta name="twitter:image" content="{{ site.url }}/images/me.jpg" />
-    {% endif %}
+    {% endif %} -->
 
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
