--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,7 +68,7 @@
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
     {% if site.post_preview_image %}
-    <meta property="og:image" content="{{ site.url }}/images/me.jpg>
+    <!-- <meta property="og:image" content="{{ site.url }}/images/me.jpg> -->
     {% endif %}
 
     <!-- Twitter Card -->
