--- a/_includes/head.html
+++ b/_includes/head.html
@@ -82,7 +82,7 @@
     <meta name="twitter:url" content="{{ site.url }}{{ page.url }}" />
     {% if site.post_preview_image %}
     <meta name="twitter:image" content="{{ site.url }}/images/utsav.jpg" />
-    {% endif %} -->
+    {% endif %}
 
     <!-- Icons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
