--- a/_includes/head.html
+++ b/_includes/head.html
@@ -67,7 +67,9 @@
     <meta property="og:description" content="{% if page.description %}{{ page.description | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
-    <meta property="og:image" content="{{ site.url }}/images/utsav.jpg>
+    {% if site.post_preview_image %}
+    <meta property="og:image" content="{{ site.url }}/images/utsav.jpg">
+    {% endif %}
 
   
     <!-- <meta name="twitter:card" content="summary" />
