trying to update ogimage

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,7 +68,7 @@
     <meta property="og:description" content="{% if page.description %}{{ page.description | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
-    <meta property="og:image" content="{{ site.url }}/images/toronto.jpg">
+    <meta property="og:image" content="https://scontent.fsin5-1.fna.fbcdn.net/v/t1.0-9/118627464_2849917301908300_7269597901887713538_o.jpg?_nc_cat=107&ccb=2&_nc_sid=e3f864&_nc_ohc=D_hiOCFt-eIAX9i3gNx&_nc_ht=scontent.fsin5-1.fna&oh=1f86094dada1d3a5e003ccf0bfccadd0&oe=5FE7E8A9">
 
   
     <!-- <meta name="twitter:card" content="summary" />
