--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -46,3 +46,25 @@
 .related-post-title {
   border-bottom: thin solid #f3f3f3;
 }
+
+.book-post {
+  margin:5% 10%;
+}
+
+.book {
+  width: 200px;
+  border: black solid 1px;
+  border-radius: 5%;
+  margin-right:  12%;
+}
+
+.youtube-post {
+  margin: 5% 10%;
+}
+
+.youtube {
+  width: 200px;
+  border: black solid 1px;
+  border-radius: 5%;
+  margin-right:  12%;
+}
