--- a/_includes/head.html
+++ b/_includes/head.html
@@ -68,7 +68,7 @@
     <meta property="og:description" content="{% if page.description %}{{ page.description | xml_escape }}{% else %}{{ site.description | xml_escape }}{% endif %}">
     <meta property="og:url" content="{{ site.url }}{{ page.url }}">
     <meta property="og:site_name" content="{{ site.title | xml_escape }}">
-    <meta property="og:image" content="ushinghal19.github.io/images/about/toronto.jpg">
+    <meta property="og:image" content="https://ushinghal19.github.io/images/about/toronto.jpg">
 
   
     <!-- <meta name="twitter:card" content="summary" />
